# jsonrpsee

./: Cargo.toml
client/http-client/: Cargo.toml
client/http-client/src/: transport.rs
client/transport/: Cargo.toml
client/transport/src/ws/: mod.rs
client/unix-client/: Cargo.toml
client/unix-client/src/: lib.rs  tests.rs
core/: Cargo.toml
core/src/: id_providers.rs  lib.rs
core/src/server/: rpc_module.rs  subscription.rs
examples/: Cargo.toml
examples/examples/: jsonrpsee_as_service.rs  jsonrpsee_server_close_connection_from_rpc_handler.rs  jsonrpsee_server_low_level_api.rs  jsonrpsee_server_unix_socket.rs  proc_macro.rs  proc_macro_bounds.rs  server_with_connection_details.rs  unix_client.rs
jsonrpsee/: Cargo.toml
jsonrpsee/src/: lib.rs  macros.rs
proc-macros/src/: lib.rs  render_server.rs
proc-macros/tests/ui/correct/: basic.rs  custom_ret_types.rs  only_server.rs  rpc_bounds.rs
proc-macros/tests/ui/incorrect/rpc/: rpc_deprecated_method.stderr
server/src/: lib.rs
server/src/transport/: mod.rs  stream.rs  unix.rs
tests/proc-macro-core/src/: lib.rs
tests/tests/: proc_macros.rs  rpc_module.rs
