[workspace]
members = [
	"benches",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"client/ws-client",
	"core",
	"examples",
	"jsonrpsee",
	"proc-macros",
	"server",
	"test-utils",
	"tests",
	"tests/wasm-tests",
	"tests/proc-macro-core",
	"types",
]
resolver = "3"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
version = "0.26.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"
homepage = "https://www.parity.io/"
keywords = ["jsonrpc", "json", "http", "websocket", "WASM"]
readme = "README.md"

[workspace.dependencies]
# Internal jsonrpsee crates
jsonrpsee-client-transport = { path = "client/transport" }
jsonrpsee-core = { path = "core" }
jsonrpsee-http-client = { path = "client/http-client" }
jsonrpsee-proc-macros = { path = "proc-macros" }
jsonrpsee-server = { path = "server" }
jsonrpsee-types = { path = "types" }
jsonrpsee-wasm-client = { path = "client/wasm-client" }
jsonrpsee-ws-client = { path = "client/ws-client" }

# Deps used by the jsonrpsee crates.
rand-utils = { git = "https://github.com/ogital-net/rand-utils.git" }
base64-simd = { version = "0", default-features = false, features = ["alloc"] }
bytes = "1"
futures-channel = { version = "0", default-features = false }
futures-timer = "3"
futures-util = { version = "0", default-features = false }
gloo-net = { version = "0", default-features = false }
heck = "0"
http = "1"
http-body = "1"
http-body-util = "0"
hyper = "1"
hyper-rustls = { version = "0", default-features = false }
hyper-util = "0"
pin-project = "1"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
route-recognizer = "0"
rustc-hash = "2"
rustls = { version = "0", default-features = false }
rustls-pki-types = "1"
rustls-platform-verifier = "0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "raw_value"] }
soketto = "0"
syn = { version = "2", default-features = false }
thiserror = "2"
tokio = "1"
tokio-rustls = { version = "0", default-features = false }
tokio-stream = "0"
tokio-util = "0"
tower = "0"
tower-http = "0"
tracing = "0"
url = "2"
wasm-bindgen-futures = "0"

# Dev dependencies
anyhow = "1"
console-subscriber = "0"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
fast-socks5 = "0.10"
futures = { version = "0", default-features = false, features = ["std"] }
pprof = { version = "0", features = ["flamegraph", "criterion"] }
socket2 = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
trybuild = "1"

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }

[workspace.lints.clippy]
manual_async_fn = { level = "allow", priority = -1 }
